@@ -25,9 +25,12 @@ import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.text.DecimalFormat;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.SortedMap;
+import java.util.function.Function;
 
 import org.apache.cassandra.locator.EndpointSnitchInfoMBean;
 import org.apache.cassandra.locator.InetAddressAndPort;
@@ -37,6 +40,7 @@ import org.apache.cassandra.tools.NodeTool.NodeToolCmd;
 
 import com.google.common.collect.ArrayListMultimap;
 
+@SuppressWarnings("UseOfSystemOutOrSystemErr")
 @Command(name = "status", description = "Print cluster information (state, load, IDs, ...)")
 public class Status extends NodeToolCmd
 {
@@ -47,7 +51,6 @@ public class Status extends NodeToolCmd
     private boolean resolveIp = false;
 
     private boolean isTokenPerNode = true;
-    private int maxAddressLength = 0;
     private String format = null;
     private Collection<String> joiningNodes, leavingNodes, movingNodes, liveNodes, unreachableNodes;
     private Map<String, String> loadMap, hostIDMap;
@@ -94,13 +97,13 @@ public class Status extends NodeToolCmd
             if (dcs.size() < tokensToEndpoints.size())
                 isTokenPerNode = false;
 
-            findMaxAddressLengthWithPort(dcs);
+            int maxAddressLength = findMaxAddressLength(dcs, s -> s.ipOrDns().length());
 
             // Datacenters
             for (Map.Entry<String, SetHostStatWithPort> dc : dcs.entrySet())
             {
                 String dcHeader = String.format("Datacenter: %s%n", dc.getKey());
-                System.out.printf(dcHeader);
+                System.out.print(dcHeader);
                 for (int i = 0; i < (dcHeader.length() - 1); i++) System.out.print('=');
                 System.out.println();
 
@@ -108,7 +111,7 @@ public class Status extends NodeToolCmd
                 System.out.println("Status=Up/Down");
                 System.out.println("|/ State=Normal/Leaving/Joining/Moving");
 
-                printNodesHeader(hasEffectiveOwns, isTokenPerNode);
+                printNodesHeader(hasEffectiveOwns, isTokenPerNode, maxAddressLength);
 
                 ArrayListMultimap<InetAddressAndPort, HostStatWithPort> hostToTokens = ArrayListMultimap.create();
                 for (HostStatWithPort stat : dc.getValue())
@@ -118,11 +121,11 @@ public class Status extends NodeToolCmd
                 {
                     Float owns = ownerships.get(endpoint.toString());
                     List<HostStatWithPort> tokens = hostToTokens.get(endpoint);
-                    printNodeWithPort(endpoint.toString(), owns, tokens, hasEffectiveOwns, isTokenPerNode);
+                    printNodeWithPort(endpoint.toString(), owns, tokens, hasEffectiveOwns, isTokenPerNode, maxAddressLength);
                 }
             }
 
-            System.out.printf("%n" + errors.toString());
+            System.out.printf("%n" + errors);
         }
         else
         {
@@ -150,13 +153,13 @@ public class Status extends NodeToolCmd
             if (dcs.values().size() < tokensToEndpoints.keySet().size())
                 isTokenPerNode = false;
 
-            findMaxAddressLength(dcs);
+            int maxAddressLength = findMaxAddressLength(dcs, s -> s.ipOrDns().length());
 
             // Datacenters
             for (Map.Entry<String, SetHostStat> dc : dcs.entrySet())
             {
                 String dcHeader = String.format("Datacenter: %s%n", dc.getKey());
-                System.out.printf(dcHeader);
+                System.out.print(dcHeader);
                 for (int i = 0; i < (dcHeader.length() - 1); i++) System.out.print('=');
                 System.out.println();
 
@@ -164,7 +167,7 @@ public class Status extends NodeToolCmd
                 System.out.println("Status=Up/Down");
                 System.out.println("|/ State=Normal/Leaving/Joining/Moving");
 
-                printNodesHeader(hasEffectiveOwns, isTokenPerNode);
+                printNodesHeader(hasEffectiveOwns, isTokenPerNode, maxAddressLength);
 
                 ArrayListMultimap<InetAddress, HostStat> hostToTokens = ArrayListMultimap.create();
                 for (HostStat stat : dc.getValue())
@@ -174,41 +177,32 @@ public class Status extends NodeToolCmd
                 {
                     Float owns = ownerships.get(endpoint);
                     List<HostStat> tokens = hostToTokens.get(endpoint);
-                    printNode(endpoint.getHostAddress(), owns, tokens, hasEffectiveOwns, isTokenPerNode);
+                    printNode(endpoint.getHostAddress(), owns, tokens, hasEffectiveOwns, isTokenPerNode, maxAddressLength);
                 }
             }
 
-            System.out.printf("%n" + errors.toString());
+            System.out.printf("%n" + errors);
         }
     }
 
-    private void findMaxAddressLength(Map<String, SetHostStat> dcs)
+    private <T extends Iterable<U>, U> int findMaxAddressLength(Map<String, T> dcs, Function<U, Integer> computeLength)
     {
-        maxAddressLength = 0;
-        for (Map.Entry<String, SetHostStat> dc : dcs.entrySet())
+        int maxAddressLength = 0;
+        Set<U> seenHosts = new HashSet<>();
+        for (Map.Entry<String, T> dc : dcs.entrySet())
         {
-            for (HostStat stat : dc.getValue())
+            for (U stat : dc.getValue())
             {
-                maxAddressLength = Math.max(maxAddressLength, stat.ipOrDns().length());
+                if (seenHosts.add(stat))
+                    maxAddressLength = Math.max(maxAddressLength, computeLength.apply(stat));
             }
         }
+        return maxAddressLength;
     }
 
-    private void findMaxAddressLengthWithPort(Map<String, SetHostStatWithPort> dcs)
+    private void printNodesHeader(boolean hasEffectiveOwns, boolean isTokenPerNode, int maxAddressLength)
     {
-        maxAddressLength = 0;
-        for (Map.Entry<String, SetHostStatWithPort> dc : dcs.entrySet())
-        {
-            for (HostStatWithPort stat : dc.getValue())
-            {
-                maxAddressLength = Math.max(maxAddressLength, stat.ipOrDns().length());
-            }
-        }
-    }
-
-    private void printNodesHeader(boolean hasEffectiveOwns, boolean isTokenPerNode)
-    {
-        String fmt = getFormat(hasEffectiveOwns, isTokenPerNode);
+        String fmt = getFormat(hasEffectiveOwns, isTokenPerNode, maxAddressLength);
         String owns = hasEffectiveOwns ? "Owns (effective)" : "Owns";
 
         if (isTokenPerNode)
@@ -217,10 +211,11 @@ public class Status extends NodeToolCmd
             System.out.printf(fmt, "-", "-", "Address", "Load", "Tokens", owns, "Host ID", "Rack");
     }
 
-    private void printNode(String endpoint, Float owns, List<HostStat> tokens, boolean hasEffectiveOwns, boolean isTokenPerNode)
+    private void printNode(String endpoint, Float owns, String epDns, String token, int size, boolean hasEffectiveOwns,
+                           boolean isTokenPerNode, int maxAddressLength)
     {
         String status, state, load, strOwns, hostID, rack, fmt;
-        fmt = getFormat(hasEffectiveOwns, isTokenPerNode);
+        fmt = getFormat(hasEffectiveOwns, isTokenPerNode, maxAddressLength);
         if (liveNodes.contains(endpoint)) status = "U";
         else if (unreachableNodes.contains(endpoint)) status = "D";
         else status = "?";
@@ -229,7 +224,7 @@ public class Status extends NodeToolCmd
         else if (movingNodes.contains(endpoint)) state = "M";
         else state = "N";
 
-        load = loadMap.containsKey(endpoint) ? loadMap.get(endpoint) : "?";
+        load = loadMap.getOrDefault(endpoint, "?");
         strOwns = owns != null && hasEffectiveOwns ? new DecimalFormat("##0.0%").format(owns) : "?";
         hostID = hostIDMap.get(endpoint);
 
@@ -241,47 +236,27 @@ public class Status extends NodeToolCmd
             throw new RuntimeException(e);
         }
 
-        String endpointDns = tokens.get(0).ipOrDns();
         if (isTokenPerNode)
-            System.out.printf(fmt, status, state, endpointDns, load, strOwns, hostID, tokens.get(0).token, rack);
+            System.out.printf(fmt, status, state, epDns, load, strOwns, hostID, token, rack);
         else
-            System.out.printf(fmt, status, state, endpointDns, load, tokens.size(), strOwns, hostID, rack);
+            System.out.printf(fmt, status, state, epDns, load, size, strOwns, hostID, rack);
     }
 
-    private void printNodeWithPort(String endpoint, Float owns, List<HostStatWithPort> tokens, boolean hasEffectiveOwns, boolean isTokenPerNode)
+    private void printNode(String endpoint, Float owns, List<HostStat> tokens, boolean hasEffectiveOwns,
+                           boolean isTokenPerNode, int maxAddressLength)
     {
-        String status, state, load, strOwns, hostID, rack, fmt;
-        fmt = getFormat(hasEffectiveOwns, isTokenPerNode);
-        if (liveNodes.contains(endpoint)) status = "U";
-        else if (unreachableNodes.contains(endpoint)) status = "D";
-        else status = "?";
-        if (joiningNodes.contains(endpoint)) state = "J";
-        else if (leavingNodes.contains(endpoint)) state = "L";
-        else if (movingNodes.contains(endpoint)) state = "M";
-        else state = "N";
-
-        load = loadMap.containsKey(endpoint) ? loadMap.get(endpoint) : "?";
-        strOwns = owns != null && hasEffectiveOwns ? new DecimalFormat("##0.0%").format(owns) : "?";
-        hostID = hostIDMap.get(endpoint);
-
-        try
-        {
-            rack = epSnitchInfo.getRack(endpoint);
-        } catch (UnknownHostException e)
-        {
-            throw new RuntimeException(e);
-        }
-
-        String endpointDns = tokens.get(0).ipOrDns();
-        if (isTokenPerNode)
-            System.out.printf(fmt, status, state, endpointDns, load, strOwns, hostID, tokens.get(0).token, rack);
-        else
-            System.out.printf(fmt, status, state, endpointDns, load, tokens.size(), strOwns, hostID, rack);
+        printNode(endpoint, owns, tokens.get(0).ipOrDns(), tokens.get(0).token, tokens.size(), hasEffectiveOwns,
+                  isTokenPerNode, maxAddressLength);
     }
 
-    private String getFormat(
-            boolean hasEffectiveOwns,
-            boolean isTokenPerNode)
+    private void printNodeWithPort(String endpoint, Float owns, List<HostStatWithPort> tokens, boolean hasEffectiveOwns,
+                                   boolean isTokenPerNode, int maxAddressLength)
+    {
+        printNode(endpoint, owns, tokens.get(0).ipOrDns(), tokens.get(0).token, tokens.size(), hasEffectiveOwns,
+                  isTokenPerNode, maxAddressLength);
+    }
+
+    private String getFormat(boolean hasEffectiveOwns, boolean isTokenPerNode, int maxAddressLength)
     {
         if (format == null)
         {
